# horcrux

./: Cargo.toml
src/: README.md  lib.hex  main.rs
src/datastore/: config.rs  datastore.rs  error.rs  indexer.rs  mod.rs
src/index/: error.rs  hash.rs  inverted_index.rs  mod.rs  range.rs  tags.rs
src/qengine/: expression.rs  query.rs
