[package]
name = "horcrux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = {version= "1.0.159", features = ["derive"]}
dashmap = "5.4.0"
bson = "2.6.1"
parking_lot = "0.12.1"


[profile.dev]
opt-level = 3